[gd_scene load_steps=8 format=2]

[ext_resource path="res://Choose_Scene.gd" type="Script" id=1]
[ext_resource path="res://ASSERTS/inside/choose.png" type="Texture" id=2]
[ext_resource path="res://ASSERTS/inside/confirmation_001.ogg" type="AudioStream" id=3]
[ext_resource path="res://ASSERTS/inside/pixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ASSERTS/inside/icielBrandonText-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 17
font_data = ExtResource( 5 )

[node name="Choose_Scene" type="Node2D"]
script = ExtResource( 1 )

[node name="Choose" type="Sprite" parent="."]
position = Vector2( 525.667, 300 )
scale = Vector2( 0.555556, 0.555556 )
texture = ExtResource( 2 )

[node name="Back" type="Button" parent="."]
margin_left = 445.0
margin_top = 436.0
margin_right = 570.0
margin_bottom = 487.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map2" type="Button" parent="."]
margin_left = 372.0
margin_top = 215.0
margin_right = 663.0
margin_bottom = 411.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map3" type="Button" parent="."]
margin_left = 685.0
margin_top = 217.0
margin_right = 976.0
margin_bottom = 413.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map1" type="Button" parent="."]
margin_left = 54.0
margin_top = 214.0
margin_right = 345.0
margin_bottom = 410.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 15.0
margin_top = 66.0
margin_right = 127.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.560784, 0.372549, 0.294118, 1 )
custom_fonts/font = SubResource( 1 )
text = "#####"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 73.0
margin_top = 30.0
margin_right = 222.0
margin_bottom = 55.0
custom_colors/font_color = Color( 0.560784, 0.372549, 0.294118, 1 )
custom_fonts/font = SubResource( 2 )
text = "###"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Map2" to="." method="_on_Map2_pressed"]
[connection signal="pressed" from="Map3" to="." method="_on_Map3_pressed"]
[connection signal="pressed" from="Map1" to="." method="_on_Map1_pressed"]
